new header icons and color

--- a/index.html
+++ b/index.html
@@ -8,32 +8,6 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <h1>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae,
-            officia! Numquam tempora nostrum aspernatur sed officia porro
-            quaerat, iure modi illo dolorem. Perspiciatis accusantium, nihil
-            illum earum consequuntur, adipisci quis sint ipsa a suscipit quos
-            quidem dolore voluptatem deserunt consectetur excepturi minima odio
-            aspernatur. Velit accusamus qui culpa eligendi. Distinctio quos
-            ipsum unde fuga omnis facere, tempora dicta aliquid ex beatae eius
-            eveniet consectetur amet officiis molestias corrupti, sapiente dolor
-            asperiores quis quam repellat? Provident ea dolor corporis a quas
-            eaque unde dicta ipsa incidunt consequuntur velit neque, ullam minus
-            maiores odio voluptate iusto atque assumenda quis aspernatur
-            mollitia cumque magni! Ratione reprehenderit tempora enim dolorum
-            ipsum, repellendus perspiciatis adipisci nam laboriosam quis
-            repellat est voluptatibus sapiente, iusto eaque quia nulla, magnam
-            commodi. Reprehenderit, veniam aut, pariatur hic similique nam
-            architecto vitae cum adipisci dolor magnam velit temporibus ipsum
-            maiores eaque optio distinctio. Dicta, ex! Facere earum rerum
-            blanditiis, debitis amet doloribus dolorum tempora nesciunt fugit
-            dolores. Sapiente ipsum ratione reprehenderit officia vero error,
-            sequi repellendus magni obcaecati eligendi minus? Perspiciatis
-            voluptate aperiam natus harum optio soluta facilis quaerat? Sapiente
-            aspernatur odio consectetur consequatur fugiat, cupiditate velit
-            sequi quia tempore excepturi, ipsam et itaque perferendis provident?
-            Non eos ut blanditiis.
-        </h1>
         <header>
             <div class="search">
                 <div class="logo">
@@ -53,13 +27,13 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <i class="middle-nav fa fa-home"></i>
+                            <i class="middle-nav fa fa-book"></i>
                             <span class="bubble" style="display: none">1</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <i class="middle-nav fa fa-user-circle-o"></i>
+                            <i class="middle-nav fa fa-user-cube"></i>
                             <span class="bubble" style="display: none">1</span>
                         </a>
                     </li>
