--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
+        <h1>lucian</h1>
         <header>
             <div class="search">
                 <div class="logo">
