--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <i class="middle-nav fa fa-user-cube"></i>
+                            <i class="middle-nav fa fa-cube"></i>
 
                             <span class="bubble" style="display: none">1</span>
                         </a>
